Intital commit for implementing x-badges support, WIP
