# src/utils/openapi.ts
@@ -622,6 +622,7 @@ export function isRedocExtension(key: string): boolean {
     'x-traitTag': true,
     'x-additionalPropertiesName': true,
     'x-explicitMappingOnly': true,
+    'x-badges': true,
   };
 
   return key in redocExtensions;
